--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -97,10 +97,12 @@ jobs:
           SERVICE_NAME: ${{ inputs.service }}
           STAGE: ${{ inputs.stage }}
         run: |
-          ECR_IMAGE_URL=$ECR_REGISTRY/$SERVICE_NAME-$STAGE:$IMAGE_TAG
-          docker build --build-arg=GHL_USERNAME=${{ secrets.GHL_USERNAME }} --build-arg=GHL_PASSWORD=${{ secrets.GHL_PASSWORD }}  -t $ECR_IMAGE_URL .
-          docker push $ECR_IMAGE_URL
-          echo "::set-output name=ECR_IMAGE_URL::$ECR_IMAGE_URL"
+          ECR_IMAGE_URL=$ECR_REGISTRY/$SERVICE_NAME-$STAGE
+          docker build --build-arg=GHL_USERNAME=${{ secrets.GHL_USERNAME }} --build-arg=GHL_PASSWORD=${{ secrets.GHL_PASSWORD }} -t $ECR_IMAGE_URL:$IMAGE_TAG .
+          docker push $ECR_IMAGE_URL:$IMAGE_TAG
+          docker tag $ECR_IMAGE_URL:$IMAGE_TAG $ECR_IMAGE_URL:latest
+          docker push $ECR_IMAGE_URL:latest
+          echo "::set-output name=ECR_IMAGE_URL:$IMAGE_TAG::$ECR_IMAGE_URL:$IMAGE_TAG"
         shell: bash
       - name: Notify slack with success or error
         uses: 8398a7/action-slack@v3
