--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -35,12 +35,14 @@ jobs:
           path: 'manifests'
           token: ${{ secrets.MANIFEST_REPO_PAT }}
       - name: Update image name
+        shell: bash
         working-directory: ${{ inputs.manifest-app-path }}
         run: |
+          pwd
+          ls -a
           sed -i "s/tag: .*/tag: ${{ github.sha }}/" values.yaml
           sed -i "s/revision: .*/revision: ${GITHUB_SHA::8}/" values.yaml
           sed -i "s/build: .*/build: ${{ github.run_number }}/" values.yaml
-        shell: bash
       - name: Commit to manifest repository
         working-directory: './manifests'
         run: |
