--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -36,10 +36,8 @@ jobs:
           token: ${{ secrets.MANIFEST_REPO_PAT }}
       - name: Update image name
         shell: bash
-        working-directory: ${{ inputs.manifest-app-path }}
+        working-directory: ./manifests/apps/${{ inputs.service }}/${{ inputs.stage }}
         run: |
-          pwd
-          ls -a
           sed -i "s/tag: .*/tag: ${{ github.sha }}/" values.yaml
           sed -i "s/revision: .*/revision: ${GITHUB_SHA::8}/" values.yaml
           sed -i "s/build: .*/build: ${{ github.run_number }}/" values.yaml
