feature: added support for overriding Dockerfile Path

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,6 +15,10 @@ on:
         required: true
         type: string
         description: 'Name of the service being released'
+      docker-file-path:
+        required: false
+        type: string
+        description: path to docker file to build
     secrets:
       GHL_USERNAME:
         required: true
@@ -90,9 +94,16 @@ jobs:
           IMAGE_TAG: ${{ github.sha }}
           SERVICE_NAME: ${{ inputs.service }}
           STAGE: ${{ inputs.stage }}
+          DOCKER_FILE_PATH: ${{ inputs.docker-file-path }}
         run: |
           ECR_IMAGE_URL=$ECR_REGISTRY/$SERVICE_NAME-$STAGE
-          docker build --build-arg=GHL_USERNAME=${{ secrets.GHL_USERNAME }} --build-arg=GHL_PASSWORD=${{ secrets.GHL_PASSWORD }} -t $ECR_IMAGE_URL:$IMAGE_TAG .
+          
+          if [[ -z "${DOCKER_FILE_PATH}" ]]; then
+            docker build --build-arg=GHL_USERNAME=${{ secrets.GHL_USERNAME }} --build-arg=GHL_PASSWORD=${{ secrets.GHL_PASSWORD }} -f $DOCKER_FILE_PATH -t $ECR_IMAGE_URL:$IMAGE_TAG .
+          else
+            docker build --build-arg=GHL_USERNAME=${{ secrets.GHL_USERNAME }} --build-arg=GHL_PASSWORD=${{ secrets.GHL_PASSWORD }} -t $ECR_IMAGE_URL:$IMAGE_TAG .
+          fi
+          
           docker push $ECR_IMAGE_URL:$IMAGE_TAG
           docker tag $ECR_IMAGE_URL:$IMAGE_TAG $ECR_IMAGE_URL:latest
           docker push $ECR_IMAGE_URL:latest
