--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,6 +19,7 @@ on:
         required: false
         type: string
         description: path to docker file to build
+        default: "."
     secrets:
       GHL_USERNAME:
         required: true
@@ -97,13 +98,7 @@ jobs:
           DOCKER_FILE_PATH: ${{ inputs.docker-file-path }}
         run: |
           ECR_IMAGE_URL=$ECR_REGISTRY/$SERVICE_NAME-$STAGE
-          
-          if [[ -z "${DOCKER_FILE_PATH}" ]]; then
-            docker build --build-arg=GHL_USERNAME=${{ secrets.GHL_USERNAME }} --build-arg=GHL_PASSWORD=${{ secrets.GHL_PASSWORD }} -f $DOCKER_FILE_PATH -t $ECR_IMAGE_URL:$IMAGE_TAG .
-          else
-            docker build --build-arg=GHL_USERNAME=${{ secrets.GHL_USERNAME }} --build-arg=GHL_PASSWORD=${{ secrets.GHL_PASSWORD }} -t $ECR_IMAGE_URL:$IMAGE_TAG .
-          fi
-          
+          docker build --build-arg=GHL_USERNAME=${{ secrets.GHL_USERNAME }} --build-arg=GHL_PASSWORD=${{ secrets.GHL_PASSWORD }} -t $ECR_IMAGE_URL:$IMAGE_TAG $DOCKER_FILE_PATH
           docker push $ECR_IMAGE_URL:$IMAGE_TAG
           docker tag $ECR_IMAGE_URL:$IMAGE_TAG $ECR_IMAGE_URL:latest
           docker push $ECR_IMAGE_URL:latest
