chore: slack messages are more verbose now

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -63,6 +63,6 @@ jobs:
         with:
           job_name: Deploy
           status: ${{ job.status }}
-          fields: repo,message,commit,author,took,ref
+          fields: repo,workflow,job,message,commit,author,took,ref
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_DEPLOYMENT_WEBHOOK_URL }}
