--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -82,6 +82,6 @@ jobs:
         with:
           job_name: Build
           status: ${{ job.status }}
-          fields: repo,message,commit,author,took,ref
+          fields: repo,workflow,job,message,commit,author,took,ref
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_DEPLOYMENT_WEBHOOK_URL }}
