--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,6 +2,10 @@ name: Build Docker Image
 on:
   workflow_call:
     inputs:
+      title:
+        required: true
+        type: string
+        description: ''
       region:
         required: true
         type: string
@@ -47,7 +51,7 @@ jobs:
         id: publish-slack
         with:
           status: "progress"
-          title: ${{ inputs.service }} - Build workflow 🏗️
+          title: ${{ inputs.title }} - Build workflow 🏗️
           slack-token: ${{ secrets.SLACK_APP_TOKEN }}
           slack-channel-id: "C01KL9FUPNK"
       - name: Checkout
@@ -89,7 +93,7 @@ jobs:
         if: ${{ always() }}
         with:
           status: ${{ job.status }}
-          title: ${{ inputs.service }} - Build workflow 🏗️
+          title: ${{ inputs.title }} - Build workflow 🏗️
           slack-token: ${{ secrets.SLACK_APP_TOKEN }}
           slack-channel-id: "C01KL9FUPNK"
           slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
