--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,6 +2,10 @@ name: Build Docker Image
 on:
   workflow_call:
     inputs:
+      title:
+        required: true
+        type: string
+        description: ''
       stage:
         required: true
         type: string
@@ -36,7 +40,7 @@ jobs:
         id: publish-slack
         with:
           status: "progress"
-          title: ${{ inputs.service }} - Deploy workflow 📦
+          title: ${{ inputs.title }} - Deploy workflow 📦
           slack-token: ${{ secrets.SLACK_APP_TOKEN }}
           slack-channel-id: "C01KL9FUPNK"
       - name: Check out manifest repository
@@ -70,7 +74,7 @@ jobs:
         if: ${{ always() }}
         with:
           status: ${{ job.status }}
-          title: ${{ inputs.service }} - Deploy workflow 📦
+          title: ${{ inputs.title }} - Deploy workflow 📦
           slack-token: ${{ secrets.SLACK_APP_TOKEN }}
           slack-channel-id: "C01KL9FUPNK"
           slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
