--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,6 +2,10 @@ name: Build and test
 on:
   workflow_call:
     inputs:
+      title:
+        required: true
+        type: string
+        description: ''
       service:
         required: true
         type: string
@@ -31,7 +35,7 @@ jobs:
         id: publish-slack
         with:
           status: "progress"
-          title: ${{ inputs.service }} - Test workflow 🧪
+          title: ${{ inputs.title }} - Test workflow 🧪
           slack-token: ${{ secrets.SLACK_APP_TOKEN }}
           slack-channel-id: "C01KL9FUPNK"
       - name: Checkout
@@ -69,7 +73,7 @@ jobs:
         if: ${{ always() }}
         with:
           status: ${{ job.status }}
-          title: ${{ inputs.service }} - Test workflow 🧪
+          title: ${{ inputs.title }} - Test workflow 🧪
           slack-token: ${{ secrets.SLACK_APP_TOKEN }}
           slack-channel-id: "C01KL9FUPNK"
           slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
