--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,7 +2,7 @@ name: Build Docker Image
 on:
   workflow_call:
     inputs:
-      title:
+      service-name:
         required: true
         type: string
         description: ''
@@ -51,7 +51,7 @@ jobs:
         id: publish-slack
         with:
           status: "progress"
-          title: ${{ inputs.title }} - Build workflow 🏗️
+          title: ${{ inputs.service-name }} - Build workflow 🏗️
           slack-token: ${{ secrets.SLACK_APP_TOKEN }}
           slack-channel-id: "C01KL9FUPNK"
       - name: Checkout
@@ -93,7 +93,7 @@ jobs:
         if: ${{ always() }}
         with:
           status: ${{ job.status }}
-          title: ${{ inputs.title }} - Build workflow 🏗️
+          title: ${{ inputs.service-name }} - Build workflow 🏗️
           slack-token: ${{ secrets.SLACK_APP_TOKEN }}
           slack-channel-id: "C01KL9FUPNK"
           slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
