--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,7 +2,7 @@ name: Build Docker Image
 on:
   workflow_call:
     inputs:
-      title:
+      service-name:
         required: true
         type: string
         description: ''
@@ -40,7 +40,7 @@ jobs:
         id: publish-slack
         with:
           status: "progress"
-          title: ${{ inputs.title }} - Deploy workflow 📦
+          title: ${{ inputs.service-name }} - Deploy workflow 📦
           slack-token: ${{ secrets.SLACK_APP_TOKEN }}
           slack-channel-id: "C01KL9FUPNK"
       - name: Check out manifest repository
@@ -74,7 +74,7 @@ jobs:
         if: ${{ always() }}
         with:
           status: ${{ job.status }}
-          title: ${{ inputs.title }} - Deploy workflow 📦
+          title: ${{ inputs.service-name }} - Deploy workflow 📦
           slack-token: ${{ secrets.SLACK_APP_TOKEN }}
           slack-channel-id: "C01KL9FUPNK"
           slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
