--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,7 +2,7 @@ name: Build and test
 on:
   workflow_call:
     inputs:
-      title:
+      service-name:
         required: true
         type: string
         description: ''
@@ -35,7 +35,7 @@ jobs:
         id: publish-slack
         with:
           status: "progress"
-          title: ${{ inputs.title }} - Test workflow 🧪
+          title: ${{ inputs.service-name }} - Test workflow 🧪
           slack-token: ${{ secrets.SLACK_APP_TOKEN }}
           slack-channel-id: "C01KL9FUPNK"
       - name: Checkout
@@ -73,7 +73,7 @@ jobs:
         if: ${{ always() }}
         with:
           status: ${{ job.status }}
-          title: ${{ inputs.title }} - Test workflow 🧪
+          title: ${{ inputs.service-name }} - Test workflow 🧪
           slack-token: ${{ secrets.SLACK_APP_TOKEN }}
           slack-channel-id: "C01KL9FUPNK"
           slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
