--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,6 +20,10 @@ on:
       SLACK_APP_TOKEN:
         required: true
         description: 'Slack app token'
+    outputs:
+      slack-message-id:
+        description: "Slack message id that was published"
+        value: ${{ steps.publish-slack.outputs.slack-message-id }}
 jobs:
   build:
     name: Test
@@ -30,9 +34,10 @@ jobs:
         uses: monta-app/slack-notifier-cli-action@main
         id: publish-slack
         with:
-          status: "progress"
-          title: ${{ inputs.service-name }} - Test workflow 🧪
-          slack-token: ${{ secrets.SLACK_APP_TOKEN }}
+          github-context: ${{ toJson(github) }}
+          job-type: "test"
+          job-status: "progress"
+          slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
           slack-channel-id: "C01KL9FUPNK"
       - name: Checkout
         uses: actions/checkout@v3
@@ -68,8 +73,9 @@ jobs:
         uses: monta-app/slack-notifier-cli-action@main
         if: ${{ always() }}
         with:
-          status: ${{ job.status }}
-          title: ${{ inputs.service-name }} - Test workflow 🧪
-          slack-token: ${{ secrets.SLACK_APP_TOKEN }}
+          github-context: ${{ toJson(github) }}
+          job-type: "test"
+          job-status: ${{ job.status }}
+          slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
           slack-channel-id: "C01KL9FUPNK"
           slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
