feat: Adapt workflow to use AWS OIDC

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,15 +27,18 @@ on:
       GHL_PASSWORD:
         required: true
         description: 'Github Password (Gradle plugin)'
-      AWS_ACCESS_KEY_ID:
+      AWS_ACCOUNT_ID:
         required: true
-        description: 'AWS access key id'
-      AWS_SECRET_ACCESS_KEY:
-        required: true
-        description: 'AWS secret access key'
+        description: 'AWS account id'
       SLACK_DEPLOYMENT_WEBHOOK_URL:
         required: true
         description: 'Deployment alert slack webhook url'
+
+permissions:
+  id-token: write # This is required for requesting the JWT
+  contents: read
+
+
 jobs:
   build:
     name: Build
@@ -82,8 +85,8 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: arn:aws:iam::${{ inputs.AWS_ACCOUNT_ID }}:role/ecr-put-image
+          role-session-name: push-new-image-to-${{ inputs.service }}-${{ inputs.stage }}
           aws-region: ${{ inputs.region }}
       - name: Login to Amazon ECR
         id: login-ecr
