chore: fixed build files not getting uploaded in multi module setups

--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -49,6 +49,6 @@ jobs:
         with:
           name: test-result
           path: |
-            build/reports/tests/test
+            **/reports/tests/test
             /home/runner/.gradle/daemon/**/daemon-*.out.log
           retention-days: 2
