Sonar fetch depth 0

--- a/.github/workflows/sonarcloud.yaml
+++ b/.github/workflows/sonarcloud.yaml
@@ -16,6 +16,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          # unlimited fetch depth for Sonar
+          fetch-depth: 0
       # Setup JDK
       - name: Set up JDK
         uses: actions/setup-java@v3
