chore: added support for new fields service-name and service-emoji

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,10 +2,18 @@ name: Deploy
 on:
   workflow_call:
     inputs:
+      service-name:
+        required: false
+        type: string
+        description: 'Proper name for your service i.e OCPP Service, Vehicle Service'
+      service-emoji:
+        required: false
+        type: string
+        description: 'An emoji to identify your service by :)'
       service-identifier:
         required: true
         type: string
-        description: 'Identifier of the service being released'
+        description: 'Identifier of the service being released i.e service-ocpp, service-vehicle'
       gradle-module:
         required: false
         type: string
@@ -56,6 +64,8 @@ jobs:
           github-context: ${{ toJson(github) }}
           job-type: "test"
           job-status: "progress"
+          service-name: ${{ inputs.service-name }}
+          service-emoji: ${{ inputs.service-emoji }}
           slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
           slack-channel-id: "C01KL9FUPNK"
       - name: Checkout
@@ -113,6 +123,8 @@ jobs:
           github-context: ${{ toJson(github) }}
           job-type: "build"
           job-status: "progress"
+          service-name: ${{ inputs.service-name }}
+          service-emoji: ${{ inputs.service-emoji }}
           slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
           slack-channel-id: "C01KL9FUPNK"
           slack-message-id: ${{ needs.test.outputs.slack-message-id }}
@@ -175,6 +187,8 @@ jobs:
           github-context: ${{ toJson(github) }}
           job-type: "deploy"
           job-status: "progress"
+          service-name: ${{ inputs.service-name }}
+          service-emoji: ${{ inputs.service-emoji }}
           slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
           slack-channel-id: "C01KL9FUPNK"
           slack-message-id: ${{ needs.build.outputs.slack-message-id }}
