ignore: add spec-prefix

--- a/.github/workflows/push_apidocs_readme.yaml
+++ b/.github/workflows/push_apidocs_readme.yaml
@@ -60,13 +60,13 @@ jobs:
       - name: Find API spec
         id: find_api_spec
         run: |
-          filepath=$(find . -type f -name "${{ input.spec-prefix }}*.yml")
+          filepath=$(find . -type f -name "${{ inputs.spec-prefix }}*.yml")
           if [ -z "$filepath" ]
           then
             echo "FILE_PATH=$filepath" >> $GITHUB_OUTPUT
             echo "API spec found at: $filepath"
           else
-            echo "NO API spec found using pattern: ${{ input.spec-prefix }}*.yml"
+            echo "NO API spec found using pattern: ${{ inputs.spec-prefix }}*.yml"
             exit 1
           fi
         shell: bash
